added event, added create and showall for event, started workin on subscribe route, made makefile more resilient to goagen errors
