# design/asset.go
@@ -1,52 +1,41 @@
 package design
 
 import (
-	"fmt"
-
 	"github.com/goadesign/goa/design"
 	"github.com/goadesign/goa/design/apidsl"
 )
 
-// addMetadata is needed to add bson struct tags for mgo
-func addMetadata(name string) {
-	apidsl.Metadata("struct:tag:bson", fmt.Sprintf("%s,omitempty", name))
-	apidsl.Metadata("struct:tag:json", fmt.Sprintf("%s,omitempty", name))
-	apidsl.Metadata("struct:tag:form", name)
-}
-
 var AssetType = apidsl.Type("AssetType", func() {
 	apidsl.Attribute("_id", design.String, "Object ID attribute", func() {
 		apidsl.Metadata("struct:field:type", "bson.ObjectId", "github.com/globalsign/mgo/bson")
-		addMetadata("_id")
+		AddMetadata("_id")
 	})
 
 	apidsl.Attribute("createdAt", design.DateTime, "timestamp of when the asset was created", func() {
-		addMetadata("createdAt")
+		AddMetadata("createdAt")
 	})
 
 	apidsl.Attribute("updatedAt", design.DateTime, "timestamp of when the asset was updated", func() {
-		addMetadata("updatedAt")
+		AddMetadata("updatedAt")
 	})
 
 	apidsl.Attribute("name", design.String, "Name of asset", func() {
-		addMetadata("name")
+		AddMetadata("name")
 		apidsl.MinLength(3)
 	})
 
 	apidsl.Attribute("type", design.String, "Type of asset", func() {
-		addMetadata("type")
+		AddMetadata("type")
 		apidsl.Enum("car")
 	})
 	apidsl.Attribute("data", design.Any, "Type specific data", func() {
-		addMetadata("data")
+		AddMetadata("data")
 	})
-
 })
 
-var assetMedia = apidsl.MediaType("application/vnd.asset+json", func() {
+var AssetMedia = apidsl.MediaType("application/vnd.asset+json", func() {
 	apidsl.Description("An asset can be pretty much anything")
 	apidsl.Reference(AssetType)
-
 	getAllAttributes := func() {
 		apidsl.Attribute("_id")
 		apidsl.Attribute("type")
@@ -66,7 +55,7 @@ var _ = apidsl.Resource("asset", func() { // Resources group related API endpoin
 	apidsl.Action("showAll", func() {
 		apidsl.Description("Get all assets")
 		apidsl.Routing(apidsl.GET(""))
-		apidsl.Response(design.OK, apidsl.CollectionOf(assetMedia))
+		apidsl.Response(design.OK, apidsl.CollectionOf(AssetMedia))
 	})
 
 	apidsl.Action("create", func() {
@@ -79,22 +68,22 @@ var _ = apidsl.Resource("asset", func() { // Resources group related API endpoin
 			apidsl.Attribute("data")
 			apidsl.Required("name", "type", "data")
 		})
-		apidsl.Response(design.OK, assetMedia)
+		apidsl.Response(design.OK, AssetMedia)
 	})
 
 	apidsl.Action("show", func() {
 		apidsl.Description("Get specific asset")
-		apidsl.Routing(apidsl.GET("/:assetID"))
+		apidsl.Routing(apidsl.GET(":assetID"))
 		apidsl.Params(func() {
 			apidsl.Param("assetID", design.String, "_id of an asset")
 			apidsl.Required("assetID")
 		})
-		apidsl.Response(design.OK, assetMedia)
+		apidsl.Response(design.OK, AssetMedia)
 	})
 
 	apidsl.Action("update", func() {
 		apidsl.Description("Update specific asset")
-		apidsl.Routing(apidsl.PUT("/:assetID"))
+		apidsl.Routing(apidsl.PUT(":assetID"))
 		apidsl.Params(func() {
 			apidsl.Param("assetID", design.String, "_id of an asset")
 			apidsl.Required("assetID")
@@ -113,7 +102,7 @@ var _ = apidsl.Resource("asset", func() { // Resources group related API endpoin
 
 	apidsl.Action("delete", func() {
 		apidsl.Description("Delete specific asset")
-		apidsl.Routing(apidsl.DELETE("/:assetID"))
+		apidsl.Routing(apidsl.DELETE(":assetID"))
 		apidsl.Params(func() {
 			apidsl.Param("assetID", design.String, "_id of an asset")
 			apidsl.Required("assetID")
